--- a/celebs-and-movies/views/layout.hbs
+++ b/celebs-and-movies/views/layout.hbs
@@ -1,32 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>{{title}}</title>
-  <link rel="stylesheet" href="/stylesheets/style.css" />
-</head>
-<body>
+<html>
+  <head>
+    <title>{{title}}</title>
+    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
-<a href="/signup">Sign Up</a>
-<br>
-    <a href="/login">Log In</a>
-    <br>
-    <a href="/logout">log out</a>
-    <br>
-    <br>
-    <br>
-    <a href="/movies">Movies</a>
-    <br>
-    <a href="/celebrities">celebrities</a>
-    <br>
-    <a href="/movies/new">movies/new</a>
-    <br>
-    <a href="/celebrities/new">celebrities/new</a>
+  </head>
+  <body>
 
-  {{{body}}}
+    
 
-  <script src="/javascripts/script.js"></script>
-</body>
+    <div>
+      <a href="/celebrities">Celebrities Page</a>
+      <br>
+      <a href="/celebrities/new">celebrities/new</a>
+      <br>
+      <a href="/movies">Movies Page</a>
+      <br>
+      <a href="/movies/new">movies/new</a>
+      <br>
+      <a href="/login">Login</a>
+      <br>
+      <a href="/logout">Logout</a>
+      <br>
+      <a href="/fancypage">fancypage</a>
+      
+    </div>
+
+    {{{body}}}
+
+    <script src='/javascripts/script.js'></script>
+  </body>
 </html>
